--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sacred96/timeline",
+    "name": "mprythero/larravel-timeline",
     "description": "Easy way to create timeline with Laravel",
     "type": "library",
     "license": "MIT",
