--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^7.1",
-        "laravel/framework": "~5.8.0"
+        "php": "^7.0|^8.0",
+        "laravel/framework": "^5.0|^6.0|^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
